# vtk_image_labeler_3d

./: .env  .gitignore  CLAUDE.md  README.md  _settings.conf  axial.mhd  axial.zraw  coronal.mhd  coronal.zraw  pyproject.toml  sagittal.mhd  sagittal.zraw
_temp/: labels_1747932597.mha  labels_1747935926.mha  labels_1747942798.mha
constraint_templates/: TG101.csv  TG101.csv.dataset.json  TG101.csv.structures.csv  TG101_Brain.csv  TG101_Brain.csv.structures.csv  TG101_Brain1.json  TG101_Brain2.json  extract_structures.py
downloads/: bladderrectumbowel_000.mha  bladderrectumbowel_001.mha  bladderrectumbowel_002.mha  bladderrectumbowel_003.mha  bladderrectumbowel_004.mha  bladderrectumbowel_005.mha  bladderrectumbowel_006.mha  bladderrectumbowel_007.mha  image_0.mha  image_1.mha
sample_data/Dataset101_Eye[ul]L/: dataset.json
sample_data/Dataset847_FourCirclesOnJawCalKv2/: dataset.json
src/experiments/: threeviews1.py  viewer1.py
src/vtk_image_labeler_3d/: README.md  app.py  base_object.py  base_widget.py  color_rotator.py  combine2one.py  config.py  eclipse_service_client.py  flowlayout.py  imageplanewidget1.py  imageplanewidget2.py  itk.py  itk_tools.py  itkvtk.py  labeled_float_slider.py  labeled_slider.py  line_edit2.py  listwidget_with_title.py  logger.py  main.py  mainwindow2d.py  mainwindow3d.py  metadata_dialog.py  model_viewer.py  nnunet_client_manager.py  nnunet_image_dataset_listwidget.py  nnunet_predictions_listwidget.py  nnunet_service.py  property_editor.py  qt_tools.py  rangeslider.py  reslicer.py  segmentation_layer_surface.py  viewer1.py  (+15 more)
(+12 files in other folders)
